[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/Mapa1/Scripts/Mapa1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mapa1/Textures/fondo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mapa1/Textures/auto_azul.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Mapa1/Textures/fabrica.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Mapa1/Textures/escuela.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Mapa1/Textures/cancha.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Mapa1/Textures/novistar.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Mapa1/Textures/1.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Mapa1/Textures/2.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Mapa1/Textures/3.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Mapa1/Textures/4.png" type="Texture" id=11]
[ext_resource path="res://Common/Textures/Correcto.png" type="Texture" id=12]
[ext_resource path="res://Common/Textures/flecha.png" type="Texture" id=13]
[ext_resource path="res://Common/Fonts/JAi_____.TTF" type="DynamicFontData" id=14]
[ext_resource path="res://Scenes/Pantalla_inicio/Resources/button0.tres" type="StyleBox" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Entrada"
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "panel"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 720 ), Vector2( 40, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Panel:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "panel2"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Panel2:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Panel2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 720 ), Vector2( 40, 40 ) ]
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 103.111, -142.222, 0, 0, 0, 0, -74.6667, -142.222, 0, 0, 0, 0, -74.6667, -35.5555, 0, 0, 0, 0, 60.4444, -35.5555, 0, 0, 0, 0, 60.4444, 99.5556, 0, 0, 0, 0, -74.6667, 99.5556, 0, 0, 0, 0, -74.6667, 206.222, 0, 0, 0, 0, -145.778, 206.222 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 350, 120 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 290, 130 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 350, 160 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 160, 190 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 90, 110 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 60, 130 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.686275, 0.372549, 0.184314, 1 )
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
shadow_size = 40

[sub_resource type="DynamicFont" id=12]
size = 40
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 100, 80 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 110, 80 )

[sub_resource type="DynamicFont" id=15]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=16]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="Mapa1" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Entrada = SubResource( 1 )
anims/panel = SubResource( 2 )
anims/panel2 = SubResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 1440.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="fondo" type="Sprite" parent="Control"]
position = Vector2( 360, 720 )
scale = Vector2( 2.8125, 2.8125 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Recorrido" type="Path2D" parent="Control"]
position = Vector2( 360, 720 )
scale = Vector2( 2.8125, 2.8125 )
curve = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="Control/Recorrido"]
position = Vector2( 103.111, -142.222 )
rotation = -3.14159
rotate = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/Recorrido/PathFollow2D"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="fabrica" type="Sprite" parent="Control"]
position = Vector2( 570, 140 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="escuela" type="Sprite" parent="Control"]
position = Vector2( 400, 460 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="cancha" type="Sprite" parent="Control"]
position = Vector2( 350, 810 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="clapystel" type="Sprite" parent="Control"]
position = Vector2( 290, 1180 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="numero1" type="Area2D" parent="Control"]
position = Vector2( 370, 210 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/numero1"]
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/numero1"]
position = Vector2( -10, 30 )
shape = SubResource( 5 )

[node name="numero2" type="Area2D" parent="Control"]
position = Vector2( 640, 610 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/numero2"]
position = Vector2( -380, -90 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/numero2"]
position = Vector2( -340, -90 )
shape = SubResource( 6 )

[node name="numero3" type="Area2D" parent="Control"]
position = Vector2( 170, 890 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/numero3"]
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/numero3"]
position = Vector2( 190, -60 )
shape = SubResource( 7 )

[node name="numero4" type="Area2D" parent="Control"]
position = Vector2( 410, 1310 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/numero4"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/numero4"]
position = Vector2( -50, -120 )
shape = SubResource( 8 )

[node name="ticket" type="Area2D" parent="Control"]
position = Vector2( 620, 1320 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/ticket"]
scale = Vector2( 10, 10 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/ticket"]
shape = SubResource( 9 )

[node name="Siguiente_Mapa" type="Area2D" parent="Control"]
position = Vector2( 50, 1200 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/Siguiente_Mapa"]
scale = Vector2( 5, 5 )
texture = ExtResource( 13 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Siguiente_Mapa"]
position = Vector2( 40, -10 )
shape = SubResource( 10 )

[node name="Anterior_mapa" type="Area2D" parent="Control"]
position = Vector2( 620, 530 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/Anterior_mapa"]
position = Vector2( 50, -80 )
scale = Vector2( 5, 5 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Anterior_mapa"]
position = Vector2( 40, -10 )
shape = SubResource( 10 )

[node name="Panel" type="Panel" parent="Control"]
visible = false
margin_left = 360.0
margin_top = 720.0
margin_right = 1000.0
margin_bottom = 2080.0
rect_scale = Vector2( 0, 0 )
mouse_filter = 2
custom_styles/panelf = SubResource( 11 )
custom_styles/panel = SubResource( 11 )
custom_styles/panelnc = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Control/Panel"]
margin_left = 50.0
margin_top = 50.0
margin_right = 600.0
margin_bottom = 1200.0
custom_fonts/font = SubResource( 12 )
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Flecha1" type="Area2D" parent="Control/Panel"]
position = Vector2( 540, 1270 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/Panel/Flecha1"]
scale = Vector2( 7, 7 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Panel/Flecha1"]
shape = SubResource( 13 )

[node name="Flecha2" type="Area2D" parent="Control/Panel"]
position = Vector2( 110, 1270 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control/Panel/Flecha2"]
scale = Vector2( 7, 7 )
texture = ExtResource( 13 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Panel/Flecha2"]
shape = SubResource( 14 )

[node name="Panel2" type="Panel" parent="Control"]
margin_left = 360.0
margin_top = 720.0
margin_right = 1000.0
margin_bottom = 2080.0
rect_scale = Vector2( 0, 0 )
mouse_filter = 2
custom_styles/panelf = SubResource( 11 )
custom_styles/panel = SubResource( 11 )
custom_styles/panelnc = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Control/Panel2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 600.0
margin_bottom = 1200.0
custom_fonts/font = SubResource( 12 )
text = "Estamos impresionados con tus habilidades, gracias a ti Pythonia ha vuelto a ser la ciudad cúspide de la tecnología y el virus ha sido contenido en estos lugares, o eso parece...
Esperamos que hayas disfrutado salvando a Pythonia, estamos seguros de que si el virus vuelve a manifestarse en algunaotra parte del mundo, estarás ahí para salvar el día."
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Salir_mapa" type="Button" parent="Control/Panel2"]
margin_left = 100.0
margin_top = 1090.0
margin_right = 544.0
margin_bottom = 1156.0
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 15 )
text = "Salir al mapa"

[node name="Salir_menu" type="Button" parent="Control/Panel2"]
margin_left = 100.0
margin_top = 1210.0
margin_right = 550.0
margin_bottom = 1276.0
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 16 )
text = "Salir al menu"
[connection signal="input_event" from="Control/numero1" to="." method="_on_numero1_input_event"]
[connection signal="input_event" from="Control/numero2" to="." method="_on_numero2_input_event"]
[connection signal="input_event" from="Control/numero3" to="." method="_on_numero3_input_event"]
[connection signal="input_event" from="Control/numero4" to="." method="_on_numero4_input_event"]
[connection signal="input_event" from="Control/ticket" to="." method="_on_ticket_input_event"]
[connection signal="input_event" from="Control/Siguiente_Mapa" to="." method="_on_Siguiente_Mapa_input_event"]
[connection signal="input_event" from="Control/Anterior_mapa" to="." method="_on_Anterior_mapa_input_event"]
[connection signal="input_event" from="Control/Panel/Flecha1" to="." method="_on_Flecha1_input_event"]
[connection signal="input_event" from="Control/Panel/Flecha2" to="." method="_on_Flecha2_input_event"]
[connection signal="pressed" from="Control/Panel2/Salir_mapa" to="." method="_on_Salir_mapa_pressed"]
[connection signal="pressed" from="Control/Panel2/Salir_menu" to="." method="_on_Salir_menu_pressed"]
